<resources>
    <string name="app_name">CollegeApp</string>
    <string name="image_description">ImageDescription</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="upload_event">Upload Event</string>
    <string name="take_attendance">Edit Profile</string>
    <string name="txt_upload_notice">Upload Notice</string>
    <string name="txt_upload_image">Upload Image</string>
    <string name="txt_add_student">Add Student</string>
    <string name="txt_add_faculty">Add Faculty</string>
    <string name="txt_delete_notice">Delete Notice</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_document_name">Title</string>
    <string name="txt_password">password</string>
    <string name="username">username</string>
    <string name="add">Add</string>
    <string name="txt_department">Department</string>
    <string name="txt_fullname">FullName</string>
    <string name="add_image">Add Image</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="text_about_us">The meaning of the word “Chetana” is consciousness. Consciousness is the essence of all creation. It is all-pervasive and infinite. It is the essence that unifies all beings and things. The cultural advancement of the human race itself can be attributed to the awareness of this consciousness. This consciousness requires a blend of emotional awareness and wisdom, which are the primary goals of education. Hence this name was suggested by Late Smt. Kusumtai Chaudhari while forming this profound education movement. Chetana, a service oriented educational trust was established on 09th September, 1969 by Respected Balasaheb Madhukarrao Chaudhari (former Education and Finance Minister, Government of Maharashtra and Ex-Speaker, Maharashtra Legislative Assembly)\n\nChetana, one of the dreams Balasaheb, has consistently progressed over the years and has today become an institution to reckon with. Now centrally located Chetana, was once a part of the suburb, located along the Mahim creek connected to Mithi River. Majority of the local population was totally dependent on this river and the creek for livelihood. As a Minister, whenever Balasaheb visited the nearby area, he was perturbed by the severe problem of illiteracy and poverty. His concern for the social and educational development of the region led him to decide over the establishment of an educational institution for the children of fishermen and other marginalized communities in the vicinity. He even travelled by boat to search for a suitable piece of land for Chetana. Finally, this search ended when the Government of Maharashtra allotted an open plot for Chetana. However, developing this plot was another task as it was a marshy land. It was filled by stone, sand and with the soil. He assembled a team of educationists and social workers to contribute to the development of Chetana.\n\nIt was predetermined that Chetana will strive to provide educational facilities to students coming from underprivileged strata of society. Till today, Chetana is committed to its mission framed by its founder. Considering the need of time, Chetana has expanded its scope of operations and set up two more institutions: Chetana’s Ramprasad Khandelwal Institute of Management and Research and Chetana’s Institute of Management and Research. Today these two institutions are rated among the best institutions in the field of Management Education. Hon’ble Shri Shirish Madhukarrao Chaudhari, Honorary Secretary of Chetana Education Trust; is now shaping this movement towards excellent group of institutes with the support of his colleagues. The development of Chetana can be traced as given below.</string>
    <string name="description_about_chetana">The meaning of the word “Chetana” is consciousness. Consciousness is the essence of all creation.\n It is all-pervasive and infinite. It is the essence that unifies all beings and things. The cultural advancement of the human race itself can be attributed to the awareness of this consciousness. This consciousness requires a blend of emotional awareness and wisdom, which are the primary goals of education. Hence this name was suggested by Late Smt. Kusumtai Chaudhari while forming this profound education movement. Chetana, a service oriented educational trust was established on 09th September, 1969 by Respected Balasaheb Madhukarrao Chaudhari (former Education and Finance Minister, Government of Maharashtra and Ex-Speaker, Maharashtra Legislative Assembly)</string>
    <string name="text_goals">▶To bring educational opportunities within the reach of the underprivileged section of the society.\n▶\tTo bring educational opportunities within the reach of the underprivileged section of the society.\n▶\tTo impact value-based education to the students.\n▶\tTo bring educational opportunities within the reach of the under-privileged section of society.\n▶\tTo generate academic environment for enabling the students to mould their personalities by imbibing moral values, professional competencies and the spirit of fair competition.\n▶\tTo ensure participation of the student in co-curricular and extra-curricular activities for their balanced development.\n▶\tTo stimulate the teachers to continuously enrich their knowledge for the benefit of their students and for the well-being of society.\n▶\tTo provide infrastructural facilities for the benefit of the students and for the social development of the local community.\n▶\tTo create among the students and the students and the teaching and non-teaching staff a sense pf pride in belonging to the institution so that it channelizes their energies for the progress of the institution.\n▶\tTo ensure justice and fair play in all academic and non-academic matters affecting the students and the staff.\n▶\tTo encourage the students to aspire for higher achievements and help them unleash their latent abilities and realize their cherished goals.\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>